src/objects/Elasticsearch_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elasticsearch_Collection__c</fullName>
        <label>Elasticsearch Collection</label>
        <referenceTo>Elasticsearch_Collection__mdt</referenceTo>
        <relationshipLabel>Elasticsearch Fields</relationshipLabel>
        <relationshipName>Elasticsearch_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Elasticsearch_Field_Name__c</fullName>
        <label>Elasticsearch Field Name(ES-SF)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Elasticsearch Field</label>
    <pluralLabel>Elasticsearch Fields</pluralLabel>
</CustomObject>